--- a/Hackathon/templates/blog/MainPage.html
+++ b/Hackathon/templates/blog/MainPage.html
@@ -3,6 +3,9 @@
 
 {% block css %}
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
 	<style type="text/css">
 		html, body {
 		   height: 100%;margin: 0; 
@@ -59,17 +62,13 @@
 		    display: none;
 		    margin: 0 70px;
 		    }
-		 #x{
-   width:500px;
-   height:2000px;
-   float:left;
-   border:1px solid grey;
-   margin-left:10px;
+	#x{
+	   border:1px solid grey;
+	   margin-left:20px;
    }
    #textArea{
-   margin-left:25px;
-   width:450px;
-   height:200px;
+  
+   margin-bottom: 10px;
    border:1px solid grey;
    border-radius:10px;
    }
@@ -87,70 +86,141 @@
 
 	{% include 'blog/navbar.html' %}
 {% endblock %}
-<div id="x">
-	<div id="info">
-          <p id="info_start">
-            <b>Click on the Microphone To Analyze your Tone</b>
-          </p>
-          <p id="info_speak_now" style="display:none;margin-left:150px;">
-            <b>Speak now....<b>
-          </p>
-          <p id="info_no_speech" style="display:none">
-            No speech was detected. You may need to adjust your <a href=
-            "//support.google.com/chrome/bin/answer.py?hl=en&amp;answer=1407892">microphone
-            settings</a>.
-          </p>
-          <p id="info_no_microphone" style="display:none">
-            No microphone was found. Ensure that a microphone is installed and that
-            <a href="//support.google.com/chrome/bin/answer.py?hl=en&amp;answer=1407892">
-            microphone settings</a> are configured correctly.
-          </p>
-          <p id="info_allow" style="display:none">
-            Click the "Allow" button above to enable your microphone.
-          </p>
-          <p id="info_denied" style="display:none">
-            Permission to use microphone was denied.
-          </p>
-          <p id="info_blocked" style="display:none">
-            Permission to use microphone is blocked. To change, go to
-            chrome://settings/contentExceptions#media-stream
-          </p>
-          <p id="info_upgrade" style="display:none">
-            Web Speech API is not supported by this browser. Upgrade to <a href=
-            "//www.google.com/chrome">Chrome</a> version 25 or later.
-          </p>
-    </div>
+<div class="ui grid">
+	<div id='x' class="ui nine wide column">
+		<div id="info">
+	          <p id="info_start">
+	          	<center>
+	          		
+	            <b><h2>Click on the Microphone To Analyze your Tone</h2></b>
+	           
+	            </center>
+	          </p>
+	          <div id="info_speak_now" style="display:none;margin-left:150px;">
+	            <center>
+	            	
+				<b><h2>Recording.......</h2></b>
+	            </center>
+	          </div>
+	          <p id="info_no_speech" style="display:none">
+	            No speech was detected. You may need to adjust your <a href=
+	            "//support.google.com/chrome/bin/answer.py?hl=en&amp;answer=1407892">microphone
+	            settings</a>.
+	          </p>
+	          <p id="info_no_microphone" style="display:none">
+	            No microphone was found. Ensure that a microphone is installed and that
+	            <a href="//support.google.com/chrome/bin/answer.py?hl=en&amp;answer=1407892">
+	            microphone settings</a> are configured correctly.
+	          </p>
+	          <p id="info_allow" style="display:none">
+	            Click the "Allow" button above to enable your microphone.
+	          </p>
+	          <p id="info_denied" style="display:none">
+	            Permission to use microphone was denied.
+	          </p>
+	          <p id="info_blocked" style="display:none">
+	            Permission to use microphone is blocked. To change, go to
+	            chrome://settings/contentExceptions#media-stream
+	          </p>
+	          <p id="info_upgrade" style="display:none">
+	            Web Speech API is not supported by this browser. Upgrade to <a href=
+	            "//www.google.com/chrome">Chrome</a> version 25 or later.
+	          </p>
+	    </div>
+		<br>
 
-<textarea id="textArea"></textarea>
-<div style="margin-left:100px;margin-bottom:5px;">
-<select class="ui search dropdown" >
-  <option value="">Languages</option>
-  <option value="AL">English</option>
-  <option value="AK">Hindi</option>
-  <option value="AZ">Telgu</option>
-  <option value="AR">Tamil</option>
-  <option value="CA">Japanese</option>
-  <option value="CO">Spanish</option>
-  <select>
-  </div>
+		<div class="container">
+			<div class="ui form">
+				<div class="field">
+					<textarea id="textArea" style="font-size: 25px; height: 200px;"></textarea>
+				</div>
+			</div>
+		</div>
 
-    <div id="div_start">
-    <button type="submit" id="startRecognition" style="width:300px;margin-bottom:10px;background-color:powderblue;border-radius:10px;"><img alt="Start" style="border-radius:50px;"onclick="changeImage()" id="imgClickAndChange"
-          src="//google.com/intl/en/chrome/assets/common/images/content/mic.gif">
-    </button>
-    </div>
+		<div class="ui divider"></div>
 
-<!-- 	<button id="stopRecognition">Stop Recognition</button> -->
+		<div class="ui grid">
+			<div class="ui five wide column" style="margin-left: 100px;">
+				<select id="select_dialet" class="ui massive search dropdown" onchange="leaveChange()">
+				  <option value="en-IN">English</option>
+				  <option value="hi_IN">Hindi</option>
+				  <option value="te-IN">Telugu</option>
+				  <option value="ta-IN">Tamil</option>
+				</select>
+			</div>
+		    <div id="div_start" class="ui five wide column">
+			    <button class="ui button" type="submit" id="startRecognition" style="width:300px;margin-bottom:50px;border-radius:10px;"><img alt="Start" style="border-radius:50px;"onclick="changeImage()" id="imgClickAndChange"
+			          src="//google.com/intl/en/chrome/assets/common/images/content/mic.gif">
+			    </button>
+		    </div>
+		</div>
+
+	<!-- 	<button id="stopRecognition">Stop Recognition</button> -->
 	
 
-	<form method="GET">{% csrf_token %}
-		<button id="my_form" style="width:300px;margin-bottom:5px;margin-left:100px;background-color:powderblue;border-radius:10px;" type="button">Translate to English</button>
-	</form>
 
-	<!-- <a class="ui primary" href="{% url 'translate' %}">Translate</a> -->
-    <h3 style="margin-left:50px;">Translated Text:</h3>
-	<div id ="1"style="font-size:20px;height:1000px;margin:5px;"></div>
+		<div class="ui divider"></div>
+
+		<form method="GET">{% csrf_token %}
+			<center>
+			<button class="ui massive button" id="my_form" style="width:300px;margin-bottom:10px;border-radius:10px;" type="button">Translate & Analyse</button>
+			</center>
+		</form>
+
+		<div class="ui divider"></div>
+
+		<!-- <a class="ui primary" href="{% url 'translate' %}">Translate</a> -->
+
+	    
+	</div>
+
+	<div class="ui five wide column">
+		<div class="container">
+     <h2>Your Emotion</h2>
+        
+      <h2 id="demo1"></h2>
+      <div class="w3-light-grey">
+      <div id="myBar1" class="w3-grey" style="height:24px;width:0"></div> 
+      </div>
+
+      <h2 id="demo2"></h2>
+      <div class="w3-light-grey">
+          <div id="myBar2" class="w3-grey" style="height:24px;width:0"></div> 
+      </div>
+
+      <h2 id="demo3"></h2>
+      <div class="w3-light-grey">
+          <div id="myBar3" class="w3-grey" style="height:24px;width:0"></div> 
+      </div>
+
+      <h2 id="demo4"></h2>
+      <div class="w3-light-grey">
+          <div id="myBar4" class="w3-grey" style="height:24px;width:0"></div> 
+      </div>
+
+      <h2 id="demo5"></h2>
+      <div class="w3-light-grey">
+          <div id="myBar5" class="w3-grey" style="height:24px;width:0"></div> 
+      </div>
+
+      <h2 id="demo6"></h2>
+      <div class="w3-light-grey">
+          <div id="myBar6" class="w3-grey" style="height:24px;width:0"></div> 
+      </div>
+
+      <h2 id="demo7"></h2>
+      <div class="w3-light-grey">
+          <div id="myBar7" class="w3-grey" style="height:24px;width:0"></div> 
+      </div>
+
+      <h2 style="margin-left:10px;">Translated Text:</h2>
+
+		<div class="jumbotron" id ="1" style="font-size: 25px;"></div>
 </div>
+	</div>
+
+</div>
+
 
 	<!-- <h1>{{ result1 }}</h1> -->
 {% endblock %}
@@ -161,6 +231,7 @@
 
 <script>
 
+var st;
 var recognizing = false;
 var recognition;
 
@@ -185,6 +256,10 @@ function changeImage() {
        
 }
 
+function leaveChange() {
+    st = document.getElementById("select_dialet").value
+}
+
 
 
 $(function () {
@@ -195,8 +270,9 @@ $(function () {
     recognition = Object;
   }
   recognition.continuous = true;
-  recognition.interimResults = true;
-  // recognition.lang = 'hi-IN';
+  recognition.interimResults = true; 
+  
+
   recognition.onresult = function (event) {
     var txtRec = '';
     for (var i = event.resultIndex; i < event.results.length; ++i) {
@@ -206,6 +282,7 @@ $(function () {
     $('#textArea').val(txtRec);
   };
   $('#startRecognition').click(function () {
+  	recognition.lang =st ;
   	recognition.start();
   	showInfo('info_speak_now');
   	recognizing = true;
@@ -219,9 +296,12 @@ $(function () {
   // });
 });
 
+var l1 = [];
+var l2 = [];
+
 $("#my_form").click(function (e) {
-	e.preventDefault();
-	console.log("sad");
+  e.preventDefault();
+  console.log("sad");
       var username = $("#textArea").val();
       console.log(username);
       $.ajax({
@@ -234,6 +314,27 @@ $("#my_form").click(function (e) {
         success: function (data) {
           console.log(data["result"]);
           document.getElementById("1").innerHTML = data["result"];
+          
+
+        
+          var list1 = data["data_list"]
+          l1 = [];
+          l2 = [];
+          for(var i=0;i<list1.length;i++){
+            console.log(list1[i]);
+            if(i%2==0)
+              l1.push(list1[i]);
+            else
+              l2.push(list1[i]);
+          }
+          console.log(l1);
+          console.log(l2);
+          /*document.getElementById("2").innerHTML = l1;
+          document.getElementById("3").innerHTML = l2;
+        */
+        move();
+        
+
         }
       });
 
@@ -252,6 +353,25 @@ function showInfo(s) {
     info.style.visibility = 'hidden';
   }
 }
+
+function move() {
+  var i;
+  for(i=1;i<=7;i++){
+      var elem1 = document.getElementById("myBar"+i);
+      width = 0;   
+      elem1.style.width = width+'%'; 
+  }
+  for(i=1;i<=l2.length;i++){
+      var elem1 = document.getElementById("myBar"+i);   
+      width = Math.round(Number(l2[i-1]*100))
+      elem1.style.width = width + '%'; 
+  }
+
+    for(i=1;i<=l1.length;i++){
+      document.getElementById("demo"+i).innerHTML = l1[i-1];
+  }
+}
+
 
 </script>
 
