--- a/Hackathon/templates/blog/navbar.html
+++ b/Hackathon/templates/blog/navbar.html
@@ -3,16 +3,18 @@
 {% block navBar %}
     <div>
         <div class="ui stackable massive inverted top attached menu" id="navbar">
-            <a class="item" id="sidebartrigger">
+           <!--  <a class="item" id="sidebartrigger">
                 <i class="sidebar icon"></i>
-            </a>
+            </a> -->
+
+            <a class="item"></a>
             <a class="item"style="font-size:25px;" >
                 <span>
                     Emoción
                 </span>
             </a>
 
-            <div class="right menu">
+           <!--  <div class="right menu">
                 <a class="right item">
                     <i class="ui call square icon"></i>
                     Contact Us
@@ -22,7 +24,7 @@
                     <i class="ui user icon"></i>
                     About Us
                 </a>
-            </div>
+            </div> -->
         </div>
 
         <div class="ui divider"></div>
